--- a/components/Detail/Creatie/creatie.module.css
+++ b/components/Detail/Creatie/creatie.module.css
@@ -304,7 +304,7 @@
 
   .start {
     margin: 0;
-    flex-direction: column-reverse;
+    flex-direction: column;
     padding: 0;
     z-index: 2;
     width: 100%;
@@ -345,6 +345,8 @@
     display: flex;
     padding: 0 1rem;
     margin-top: 2rem;
+    -webkit-text-stroke: 0.1rem var(--colorBlue);
+    text-stroke: 0.1rem var(--colorBlue);
   }
 
   .icon_circle__svg {
@@ -379,14 +381,14 @@
   }
 
   .start {
-    flex-direction: row;
+    flex-direction: row-reverse;
     position: relative;
-    align-items: flex-start;
+    align-items: flex-end;
     width: 100%;
     height: auto;
     margin: 5rem 0;
     padding: 0;
-    justify-content: flex-start;
+    justify-content: flex-end;
   }
 
   .locked_icon {
