--- a/components/Profile/SelectedProject/selectedproject.module.css
+++ b/components/Profile/SelectedProject/selectedproject.module.css
@@ -1,9 +1,6 @@
 @value tokens: "../../../css/tokens.module.css";
 @value blueColor, yellowColor, beigeColor, redColor, greenColor, lightColor from tokens;
 
-.part_content {
-}
-
 .grid_item__image {
   grid-column: 1;
 }
@@ -42,6 +39,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 .header_button {
@@ -50,6 +48,7 @@
   border: none;
   background-color: transparent;
   cursor: pointer;
+  padding: 0.5rem 0;
 }
 
 .header_button:first-of-type {
@@ -156,7 +155,16 @@
 }
 
 @media screen and (max-width: 850px) {
+  .part_content {
+    padding: 0 2rem;
+  }
   .grid_item__image {
     margin: 0 auto;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .part_content {
+    padding: 0 1rem;
   }
 }
