--- a/css/styles.css
+++ b/css/styles.css
@@ -355,6 +355,19 @@ a {
   opacity: 0.99;
 }
 
+.progress_active_realisation,
+.progress_active_creation,
+.progress_active_crowdfund,
+.progress_active_concept {
+  opacity: 1 !important;
+}
+
+.progress_active_realisation .progress_creation,
+.progress_active_realisation .progress_crowdfund,
+.progress_active_realisation .progress_concept {
+  background-color: red;
+}
+
 @media screen and (max-width: 850px) {
   /* .content {
     height: unset;
