--- a/css/admin.module.css
+++ b/css/admin.module.css
@@ -40,5 +40,5 @@
   display: grid;
   padding-right: 10rem;
   grid-template-columns: repeat(4, 1fr);
-  padding-right: 10rem;
+  padding: 1.5rem 10rem 1.5rem 2rem;
 }
