--- a/css/styles.css
+++ b/css/styles.css
@@ -47,6 +47,12 @@ a {
   height: 100vh;
 }
 
+/* Detail scroll progress */
+
+.feedback-container {
+  display: flex;
+}
+
 /* Mouse */
 
 @media (any-pointer: fine) {
@@ -274,7 +280,7 @@ a {
 }
 
 .form_card__two__toevoeging:before {
-  content: url("../public/assets/creatie/creatie_toevoeging_form_extra.svg");
+  content: url('../public/assets/creatie/creatie_toevoeging_form_extra.svg');
   position: absolute;
   display: block;
   right: -12%;
@@ -284,7 +290,7 @@ a {
 }
 
 .form_card__two__aanpassing:before {
-  content: url("../public/assets/creatie/creatie_aanpassing_form_extra.svg");
+  content: url('../public/assets/creatie/creatie_aanpassing_form_extra.svg');
   position: absolute;
   display: block;
   right: -12%;
@@ -294,7 +300,7 @@ a {
 }
 
 .form_card__two__overig:before {
-  content: url("../public/assets/creatie/creatie_overig_form_extra.svg");
+  content: url('../public/assets/creatie/creatie_overig_form_extra.svg');
   position: absolute;
   display: block;
   right: -12%;
