--- a/components/Detail/Header/header.module.css
+++ b/components/Detail/Header/header.module.css
@@ -5,7 +5,7 @@
 
 .project_tags {
   display: flex;
-  composes: smallCaps from "../../../css/typo.module.css";
+  composes: smallCaps from '../../../css/typo.module.css';
   color: beigeColor;
   margin-bottom: 1rem;
 }
@@ -21,7 +21,7 @@
 }
 
 .button_back {
-  composes: buttonBack from "../../../css/buttons.module.css";
+  composes: buttonBack from '../../../css/buttons.module.css';
   cursor: pointer;
   margin-bottom: 2rem;
 }
@@ -31,25 +31,25 @@
 }
 
 .back_text {
-  composes: bold from "../../../css/typo.module.css";
+  composes: bold from '../../../css/typo.module.css';
 }
 
 /* Info Project */
 
 .title {
-  composes: title from "../../../css/typo.module.css";
+  composes: title from '../../../css/typo.module.css';
   margin-bottom: 1rem;
 }
 
 .title_outline {
-  composes: titleOutline from "../../../css/typo.module.css";
+  composes: titleOutline from '../../../css/typo.module.css';
 }
 
 /* Project Subtitles */
 
 .project_subtitles {
   display: flex;
-  margin-bottom: 5rem;
+  margin-bottom: 2rem;
 }
 
 .info_item {
@@ -90,23 +90,23 @@
 }
 
 .info_light {
-  composes: smallCapsLight from "../../../css/typo.module.css";
+  composes: smallCapsLight from '../../../css/typo.module.css';
 }
 
 .info_bold {
-  composes: smallCaps from "../../../css/typo.module.css";
+  composes: smallCaps from '../../../css/typo.module.css';
 }
 
 /* Project Description */
 
 .description_bold {
-  composes: bold from "../../../css/typo.module.css";
+  composes: bold from '../../../css/typo.module.css';
   color: #3b4045;
   margin-bottom: 2rem;
 }
 
 .description_light {
-  composes: text from "../../../css/typo.module.css";
+  composes: text from '../../../css/typo.module.css';
   color: #3b4045;
 }
 
@@ -131,7 +131,7 @@
   }
 
   .tagline_text {
-    composes: mediumTitle from "../../../css/typo.module.css";
+    composes: mediumTitle from '../../../css/typo.module.css';
     margin-bottom: 3rem;
   }
 
@@ -152,7 +152,7 @@
   }
 
   .extra_image:after {
-    content: "";
+    content: '';
     position: absolute;
     display: block;
     background: beigeColor;
