--- a/components/Detail/Crowdfunding/crowdfunding.module.css
+++ b/components/Detail/Crowdfunding/crowdfunding.module.css
@@ -438,11 +438,21 @@
     margin-bottom: 1rem;
     text-fill-color: var(--colorBlue);
     font-size: 4.2rem;
+    -webkit-text-stroke: 0.01rem var(--colorBlue);
+    text-stroke: 0.01rem var(--colorBlue);
+    line-height: 3.6rem;
   }
   .title_outline {
     font-size: 4.2rem;
     -webkit-text-fill-color: transparent;
     text-fill-color: transparent;
+    -webkit-text-stroke: 0.18rem var(--colorBlue);
+    text-stroke: 0.18rem var(--colorBlue);
+    line-height: 3.6rem;
+  }
+
+  .title_description {
+    margin-top: 1rem;
   }
 
   .timeline {
@@ -503,11 +513,15 @@
     margin-bottom: 1rem;
     text-fill-color: var(--colorBlue);
     font-size: 5rem;
+    -webkit-text-stroke: 0.18rem var(--colorBlue);
+    text-stroke: 0.18rem var(--colorBlue);
   }
   .title_outline {
     font-size: 5rem;
     -webkit-text-fill-color: transparent;
     text-fill-color: transparent;
+    -webkit-text-stroke: 0.18rem var(--colorBlue);
+    text-stroke: 0.18rem var(--colorBlue);
   }
 
   .form_crowdfunding {
