--- a/components/Detail/Crowdfunding/crowdfunding.module.css
+++ b/components/Detail/Crowdfunding/crowdfunding.module.css
@@ -512,14 +512,16 @@
   .title {
     margin-bottom: 1rem;
     text-fill-color: var(--colorBlue);
-    font-size: 5rem;
-    -webkit-text-stroke: 0.18rem var(--colorBlue);
-    text-stroke: 0.18rem var(--colorBlue);
+    font-size: 4rem;
+    line-height: 4rem;
+    -webkit-text-stroke: 0.1rem var(--colorBlue);
+    text-stroke: 0.1rem var(--colorBlue);
   }
   .title_outline {
-    font-size: 5rem;
+    font-size: 4rem;
     -webkit-text-fill-color: transparent;
     text-fill-color: transparent;
+    line-height: 4rem;
     -webkit-text-stroke: 0.18rem var(--colorBlue);
     text-stroke: 0.18rem var(--colorBlue);
   }
