--- a/css/detail.module.css
+++ b/css/detail.module.css
@@ -227,12 +227,14 @@
   .timeline_line__waiting {
     transition: background-color 1.5s cubic-bezier(0.025, 0.9, 0.45, 1);
     margin-left: 0;
+    height: 70%;
   }
 
   .timeline_line__cocreatie {
     margin-top: 30rem;
     padding-right: 0;
-    height: 70%;
+    height: calc(100% - 70rem);
+    display: flex;
   }
 
   .timeline_line__crowdfunding {
@@ -245,7 +247,7 @@
   .timeline_line__realisatie {
     transition: background-color 1.5s cubic-bezier(0.025, 0.9, 0.45, 1);
     margin-left: 0;
-    height: 75%;
+    height: 70%;
     margin-top: 15rem;
   }
 
@@ -295,6 +297,20 @@
     padding: 0;
     position: relative;
     margin: 4rem 2rem 4rem 7rem;
+  }
+
+  .timeline_line__realisatie {
+    transition: background-color 1.5s cubic-bezier(0.025, 0.9, 0.45, 1);
+    margin-left: 0;
+    height: calc(100% - 60rem);
+    margin-top: 15rem;
+  }
+
+  .timeline_line__cocreatie {
+    margin-top: 30rem;
+    padding-right: 0;
+    height: calc(100% - 50rem);
+    display: flex;
   }
 }
 
